    client must be a bit further ahead.

    Extend synchronization on server to determine last acked input,
    when calculating offset, do it relative to oldest input received
    (eg. last recieved input + 1) rather than the input tick in the
    packet.

    To implement this server needs to track last tick received from client.


Monday Morning, May 4th, 2015
-----------------------------

    Implement code that measures difference between client and server tick
    during sync phase. initially just print it out.

    Extend client and server to both track ticks.

    Server now counts a number of samples and then ends sync stage.

    Client starts off not initially synchronizing (because cannot synchronize
    until the server tells the client the tick...), and client synchronize is
    kicked off by the server saying, OK we are synchronizing now.

    Added sync sequence so the server can discard old input sync packets.

    Client needs to get sync sequence from server.

    Server should ignore sync input packets from client without matching sync sequence.

    Server needs to communicate sync offset back to client.

    This probably means that server stays in sync until the client reflects back
    the expected sync offset once the maximum # of sync samples have been gathered.

    Extend the server to print out: "client synchronize offset: %d"

    Extend client to print out offset when detects synchronized.


Sunday, May 3rd, 2015
---------------------

    Client needs access to current tick, either in its tick or through a pointer to world.

    Server needs access to current tick as well.

    For now I think it is good to copy it across. I don't want client/server to manipulate
    the world directly, except through functions that accept the client/server and world 
    to bridge.

    Added client_tick and server_tick to client structure.

    Client tick is the last simulated tick from the client.
